test/invalidConstAnnotationError.slq
def f[n:!ℕ](cand:const int[n])⇒cand=1; // error
